Added SPM and changed order from prn to roll no

--- a/AttendanceGenerator/AttendanceGenerator.csproj
+++ b/AttendanceGenerator/AttendanceGenerator.csproj
@@ -25,6 +25,9 @@
     <None Update="Data\Panels\Panel3.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Data\Panels\T11-SPM-Panel1.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Data\Panels\T8-Panel1.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
